--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -25,6 +25,7 @@ $color-gray: #F2F2F2; //ok
 $color-darkgray: #AAAAAA; //#EEEEEE;
 $color-dark: #333333; //ok
 $color-blue: #0083CA; //ok
+$color-green: #2ecc71; //ok
 $color-yellow: #FD9802; //ok
 $color-red: #A94442; //ok
 //Size
