--- a/public/views/login.html
+++ b/public/views/login.html
@@ -5,7 +5,10 @@
     <div class="grid-xs-4 grid-xs-offset-4 margin-top-xl">
       <div class="bg-white box-shadow margin-top-xl">
         <div class="login-header bg-secondary padding-top-sm padding-bottom-sm padding-left-xl padding-right-xl">
-            <h2 class="text-lg text-white align-center">LOGIN</h2>
+          <h2 class="text-lg text-white align-center">
+            <img src="img/icon-lista-de-presentes-white.png" class="align-top margin-right-sm" alt="LISTA DE PRESENTES">
+            LOGIN
+          </h2>
         </div>
         <div class="login-content padding-xl">
           <div class="bg-light text-red text-center margin-bottom-lg padding-sm" ng-class="message.type" ng-show="message.status" role="alert">
