Search products in Buscapé with pagination and ordering. Add and remove products in My list.

--- a/public/views/inc_sidebar.html
+++ b/public/views/inc_sidebar.html
@@ -1,4 +1,4 @@
-<div class="grid-xs-3">
+<div class="grid-md-3 grid-xs-12 margin-bottom-xl">
   <ul class="list bg-white box-shadow">
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
       <a ng-class="{'active text-primary': menuActive == 'dashboard'}" href="/" class="block padding-sm text-default clear-decoration">Início</a>
