Fix product route; Create route to search for event by name; Show public event

--- a/public/views/evento.html
+++ b/public/views/evento.html
@@ -27,6 +27,12 @@
               <input id="name" class="field text-field text-field-lg" type="text" ng-model="event.name" required>
             </div>
           </div>
+          <div class="grid-row margin-top-xl margin-bottom-xl">
+            <div class="grid-xs-12">
+              <label class="text-sm text-default">Site:</label>
+              <input id="slug" class="field text-field text-field-lg" type="text" ng-model="event.slug" required>
+            </div>
+          </div>
           <div class="grid-row margin-bottom-xl">
             <div class="grid-xs-6">
               <label class="text-sm text-default">Data:</label>
