--- a/public/views/lista-presentes.html
+++ b/public/views/lista-presentes.html
@@ -49,7 +49,7 @@
                 <p class="text-xs text-default margin-top-sm margin-bottom-sm">De: <span class="text-md text-primary bold">R$ {{item.product.pricemin}}</span></p>
                 <p class="text-xs text-default clear-margin">Até: <span class="text-sm text-primary bold">R$ {{item.product.pricemax}}</span></p>
                 <button ng-hide="item.product.added" ng-click="add(item.product)" class="btn-sm btn-primary margin-top-sm">+ ADICIONAR</button>
-                <button ng-show="item.product.added" ng-click="remove(item.product)" class="btn-sm btn-default margin-top-sm">- REMOVER</button>
+                <button ng-show="item.product.added" ng-click="remove(item.product._id)" class="btn-sm btn-default margin-top-sm">- REMOVER</button>
               </div>
             </li>
           </ul>
