--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -5,10 +5,7 @@ $z-index-md: $z-index-lg - 2;
 $z-index-sm: $z-index-md - 3;
 $z-index-xs: $z-index-sm - 4;
 $z-index-xxs: $z-index-xs - 5;
-
-
 @import 'variables';
-
 body {
   font-family: 'Open Sans', sans-serif;
 }
@@ -30,7 +27,7 @@ body {
 }
 
 .vaquinha {
-  background: url('../img/vaquinha1.png');
+  background: url('/img/vaquinha.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -67,4 +64,8 @@ body {
 
 .alert.error {
   background-color: $color-light !important;
+}
+
+.cursor-disabled {
+  cursor: not-allowed;
 }
