--- a/public/views/inc_sidebar.html
+++ b/public/views/inc_sidebar.html
@@ -1,7 +1,7 @@
 <div class="grid-md-3 grid-xs-12 margin-bottom-xl">
   <ul class="list bg-white box-shadow">
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
-      <a ng-class="{'active text-primary': menuActive == 'dashboard'}" href="/" class="block padding-sm text-default clear-decoration">Início</a>
+      <a ng-class="{'active text-primary': menuActive == 'dashboard'}" href="/dashboard" class="block padding-sm text-default clear-decoration">Início</a>
     </li>
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
       <a ng-class="{'active text-primary': menuActive == 'event'}" href="/evento" class="block padding-sm text-default clear-decoration">Meu evento</a>
@@ -13,7 +13,7 @@
       <a ng-class="{'active text-primary': menuActive == 'myList'}" href="/minha-lista" class="block padding-sm text-default clear-decoration">Minha lista de presentes</a>
     </li>
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
-      <a ng-class="{'active text-primary': menuActive == '/meus-presentes'}" href="/meus-presentes" class="block padding-sm text-default clear-decoration">Meus presentes</a>
+      <a ng-class="{'active text-primary': menuActive == 'myPresents'}" href="/meus-presentes" class="block padding-sm text-default clear-decoration">Meus presentes</a>
     </li>
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
       <a ng-class="{'active text-primary': menuActive == '/vaquinha'}" href="/vaquinha" class="block padding-sm text-default clear-decoration">Vaquinha</a>
