--- a/public/views/meus-presentes.html
+++ b/public/views/meus-presentes.html
@@ -17,7 +17,7 @@
       <div class="bg-white box-shadow padding-top-md padding-right-xl padding-bottom-md padding-left-xl">
         <div class="grid-row">
           <div class="grid-xs-12">
-            <h2 class="text-lg text-default clear-margin">Minha lista de presentes</h2>
+            <h2 class="text-lg text-default clear-margin">Meus presentes</h2>
           </div>
         </div>
         <div class="grid-row margin-top-xl">
@@ -30,7 +30,7 @@
         </div>
         <div class="grid-row margin-top-xl">
           <ul vertilize-container class="list list-horizontal">
-            <li ng-repeat="item in myList | filter: search" class="list-item grid-lg-3 grid-sm-4 grid-xs-6 margin-bottom-lg">
+            <li ng-repeat="item in myPresents | filter: search" class="list-item grid-lg-3 grid-sm-4 grid-xs-6 margin-bottom-lg">
               <div class="bg-white bd-xs bd-solid bd-gray bd-radius-md padding-lg">
                 <div class="align-center margin-bottom-sm">
                   <a href="{{item.link}}" target="_blank">
@@ -40,7 +40,6 @@
                 <a vertilize class="text-xs text-default block" title="{{item.name}}" href="{{item.link}}" target="_blank">{{item.name}}</a>
                 <p class="text-xs text-default margin-top-sm margin-bottom-sm">De: <span class="text-md text-primary bold">R$ {{item.pricemin}}</span></p>
                 <p class="text-xs text-default clear-margin">Até: <span class="text-sm text-primary bold">R$ {{item.pricemax}}</span></p>
-                <button ng-click="remove(item._id)" class="btn-sm btn-default margin-top-sm">- REMOVER</button>
               </div>
             </li>
           </ul>
