--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -35,7 +35,7 @@
               <p class="text-sm text-default">Vocês tiveram</p>
               <p class="text-xl text-primary">{{eventConfirmations}}</p>
               <p class="text-sm text-default">confirmações de presença</p>
-              <p class="text-sm"><a href="/confirmacoes-presenca" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
+              <p class="text-sm"><a href="/confirmacoes" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
             </div>
           </div>
         </div>
