--- a/public/views/inc_sidebar.html
+++ b/public/views/inc_sidebar.html
@@ -18,5 +18,8 @@
     <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
       <a ng-class="{'active text-primary': menuActive == '/vaquinha'}" href="/vaquinha" class="block padding-sm text-default clear-decoration">Vaquinha</a>
     </li>
+    <li class="list-item bd-bottom-xs bd-bottom-solid bd-gray">
+      <a ng-class="{'active text-primary': menuActive == 'confirmations'}" href="/confirmacoes" class="block padding-sm text-default clear-decoration">Confirmações de Presença</a>
+    <li>
   </ul>
 </div>
