Fixes in date and event cover

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -13,7 +13,7 @@
             <h2 class="text-lg text-default clear-margin">Início</h2>
           </div>
         </div>
-        <div ng-show="eventGifts" class="grid-row margin-top-xl">
+        <div class="grid-row margin-top-xl">
           <div class="grid-xs-4 align-center">
             <div class="bd-xs bd-solid bd-gray bd-radius-lg">
               <p class="text-sm text-default">Vocês ganharam</p>
@@ -22,7 +22,7 @@
               <p class="text-sm"><a href="/meus-presentes" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
             </div>
           </div>
-          <div ng-show="eventDonations" class="grid-xs-4 align-center">
+          <div class="grid-xs-4 align-center">
             <div class="bd-xs bd-solid bd-gray bd-radius-lg">
               <p class="text-sm text-default">Vocês possuem</p>
               <p class="text-xl text-primary">{{eventDonations}}</p>
@@ -30,7 +30,7 @@
               <p class="text-sm"><a href="/vaquinha" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
             </div>
           </div>
-          <div ng-show="eventConfirmations" class="grid-xs-4 align-center">
+          <div class="grid-xs-4 align-center">
             <div class="bd-xs bd-solid bd-gray bd-radius-lg">
               <p class="text-sm text-default">Vocês tiveram</p>
               <p class="text-xl text-primary">{{eventConfirmations}}</p>
