--- a/public/views/public.html
+++ b/public/views/public.html
@@ -7,7 +7,7 @@
       <div class="grid-xs-12">
         <img src="/uploads/{{event.image}}" class="img block" alt="Matheus e Marcela">
         <div class="shadow-banner absolute position-bottom position-left position-right padding-sm margin-left-sm margin-right-sm">
-          <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; (28/10/2017)</h1>
+          <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; {{event.date | date:'dd/MM/yyyy'}}</h1>
         </div>
       </div>
     </div>
