--- a/public/views/evento.html
+++ b/public/views/evento.html
@@ -24,7 +24,7 @@
           <div class="grid-row margin-top-xl margin-bottom-xl">
             <div class="grid-xs-12">
               <label class="text-sm text-default">Nome:</label>
-              <input id="name" class="field text-field text-field-lg" type="text" ng-model="event.name" required>
+              <input id="name" class="field text-field text-field-lg" type="text" ng-model="event.name" autofocus required>
             </div>
           </div>
           <div class="grid-row margin-top-xl margin-bottom-xl">
@@ -36,11 +36,11 @@
           <div class="grid-row margin-bottom-xl">
             <div class="grid-xs-6">
               <label class="text-sm text-default">Data:</label>
-              <input id="date" class="field text-field text-field-lg" type="text" name="date" mask="39/19/9999" ng-value="event.date" ng-model="event.date" required>
+              <input id="date" class="field text-field text-field-lg" type="text" mask="39/19/9999" ng-value="event.date" ng-model="event.date" required>
             </div>
             <div class="grid-xs-6">
               <label class="text-sm text-default">Hora:</label>
-              <input id="ibu" class="field text-field text-field-lg" type="text" ng-model="event.time" required>
+              <input id="time" class="field text-field text-field-lg" type="text" ng-model="event.time">
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
@@ -62,23 +62,42 @@
           <div class="grid-row margin-bottom-xl">
             <div class="grid-xs-12">
               <label class="text-sm text-default block margin-bottom-xs">Imagem de capa:</label>
-              <img ng-show="!fileUploaded" ngf-thumbnail="'/uploads/' + event.image" class="img">
-
+            </div>
+            <div class="grid-xs-3">
               <label>
-                <input type="radio" ng-model="event.image" value="cover-default.jpg">
-                Capa 1
+                <img ng-src="/uploads/cover-default1.jpg" alt="Capa padrão 1" class="img">
+                <input type="radio" ng-model="event.image" value="cover-default1.jpg"> 
+                Capa padrão 1
               </label>
-
+            </div>
+            <div class="grid-xs-3">
               <label>
+                <img ng-src="/uploads/cover-default2.jpg" alt="Capa padrão 2" class="img">
                 <input type="radio" ng-model="event.image" value="cover-default2.jpg">
-                Capa 2
+                Capa padrão 2
               </label>
+            </div>
+            <div class="grid-xs-3">
               <label>
+                <img ng-src="/uploads/cover-default3.jpg" alt="Capa padrão 3" class="img">
                 <input type="radio" ng-model="event.image" value="cover-default3.jpg">
-                Capa 3
+                Capa padrão 3
               </label>
-              <input type="file" class="block" ngf-select ng-model="event.image" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="5MB" ng-Change="fileChanged()">
-              <i ng-show="event.form.image.$error.maxSize">Arquivo muito grande {{event.image.size / 1000000|number:1}}MB: max 5MB</i>
+            </div>
+            <div class="grid-xs-3">
+              <label>
+                <img ng-src="/uploads/cover-default4.jpg" alt="Capa padrão 4" class="img">
+                <input type="radio" ng-model="event.image" value="cover-default4.jpg">
+                Capa padrão 4
+              </label>
+            </div>
+            <div class="grid-xs-12 overflow-hidden">
+              <label class="block margin-top-sm">
+                Capa personalizada:
+                <!-- <img ng-show="fileUploaded" ngf-thumbnail="'/uploads/' + event.image" class="img"> -->
+                <input type="file" class="text-xs" ngf-select ng-model="event.image" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="5MB" ng-Change="fileChanged()">
+                <i ng-show="event.form.image.$error.maxSize">Arquivo muito grande {{event.image.size / 1000000|number:1}}MB: max 5MB</i>
+              </label>
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
