--- a/public/views/publico.html
+++ b/public/views/publico.html
@@ -5,10 +5,12 @@
   <div class="grid-container">
     <div class="grid-row">
       <div class="grid-xs-12">
-        <img src="/uploads/{{event.image}}" class="img block" alt="Matheus e Marcela">
-        <div class="shadow-banner absolute position-bottom position-left position-right padding-sm margin-left-sm margin-right-sm">
-          <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; {{event.date | date:'dd/MM/yyyy'}}</h1>
-        </div>
+        <a href="/{{event.slug}}">
+          <img src="/uploads/{{event.image}}" class="img block" alt="Matheus e Marcela">
+          <div class="shadow-banner absolute position-bottom position-left position-right padding-sm margin-left-sm margin-right-sm">
+            <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; {{event.date | date:'dd/MM/yyyy'}}</h1>
+          </div>
+        </a>
       </div>
     </div>
   </div>
@@ -76,6 +78,13 @@
         </div>
       </li>
     </ul>
+  </div>
+  <div class="grid-row margin-top-xl">
+    <div class="grid-xs-4 grid-xs-offset-4">
+      <a href="/{{event.slug}}/confirmacao" class="clear-decoration">
+        <buttom type="buttom" class="btn-lg text-secondary bd-secondary bd-sm bd-solid">Confirmar Presença &check;</buttom>
+      </a>
+    </div>
   </div>
 </div>
 <!-- footer -->
