--- a/public/views/meus-presentes.html
+++ b/public/views/meus-presentes.html
@@ -30,7 +30,7 @@
         </div>
         <div class="grid-row margin-top-xl">
           <ul vertilize-container class="list list-horizontal">
-            <li ng-repeat="item in myPresents | filter: search" class="list-item grid-lg-3 grid-sm-4 grid-xs-6 margin-bottom-lg">
+            <li ng-repeat="item in myPresents | filter: search" class="list-item grid-xl-3 grid-lg-4 grid-sm-6 grid-xs-12 margin-bottom-lg">
               <div class="bg-white bd-xs bd-solid bd-gray bd-radius-md padding-lg">
                 <div class="align-center margin-bottom-sm">
                   <a href="{{item.link}}" target="_blank">
