--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -6,7 +6,7 @@
     <!-- menu -->
     <ng-include src="'views/inc_sidebar.html'"></ng-include>
     <!-- content -->
-    <div class="grid-xs-9">
+    <div class="grid-md-9 grid-xs-12">
       <div class="bg-white box-shadow padding-top-md padding-right-xl padding-bottom-md padding-left-xl">
         <div class="grid-row">
           <div class="grid-xs-12">
@@ -14,24 +14,24 @@
           </div>
         </div>
         <div class="grid-row margin-top-xl">
-          <div class="grid-xs-4 align-center">
-            <div class="bd-xs bd-solid bd-gray bd-radius-lg">
+          <div class="grid-md-4 grid-sm-6 grid-xs-12 align-center margin-bottom-lg">
+            <div class="bd-xs bd-solid bd-gray bd-radius-lg padding-sm">
               <p class="text-sm text-default">Vocês ganharam</p>
               <p class="text-xl text-primary">{{eventGifts}}</p>
               <p class="text-sm text-default">presentes até o momento</p>
               <p class="text-sm"><a href="/meus-presentes" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
             </div>
           </div>
-          <div class="grid-xs-4 align-center">
-            <div class="bd-xs bd-solid bd-gray bd-radius-lg">
+          <div class="grid-md-4 grid-sm-6 grid-xs-12 align-center margin-bottom-lg">
+            <div class="bd-xs bd-solid bd-gray bd-radius-lg padding-sm">
               <p class="text-sm text-default">Vocês possuem</p>
               <p class="text-xl text-primary">{{eventDonations}}</p>
               <p class="text-sm text-default">de doações na vaquinha</p>
               <p class="text-sm"><a href="/vaquinha" class="btn btn-sm btn-secondary text-white clear-decoration inline-block clear-width padding-left-sm padding-right-sm">Ver relatório</a></p>
             </div>
           </div>
-          <div class="grid-xs-4 align-center">
-            <div class="bd-xs bd-solid bd-gray bd-radius-lg">
+          <div class="grid-md-4 grid-sm-6 grid-xs-12 align-center margin-bottom-lg">
+            <div class="bd-xs bd-solid bd-gray bd-radius-lg padding-sm">
               <p class="text-sm text-default">Vocês tiveram</p>
               <p class="text-xl text-primary">{{eventConfirmations}}</p>
               <p class="text-sm text-default">confirmações de presença</p>
