--- a/public/views/publico-confirmacao.html
+++ b/public/views/publico-confirmacao.html
@@ -5,7 +5,7 @@
   <div class="grid-container">
     <div class="grid-row">
       <div class="grid-xs-12">
-        <a href="/{{event.slug}}">
+        <a href="/{{event.slug}}" class="clear-decoration">
           <img src="/uploads/{{event.image}}" class="img block" alt="Matheus e Marcela">
           <div class="shadow-banner absolute position-bottom position-left position-right padding-sm margin-left-sm margin-right-sm">
             <h1 class="text-xl text-white align-center clear-margin padding-top-xl">{{event.name}} &hearts; {{event.date | date:'dd/MM/yyyy'}}</h1>
@@ -33,29 +33,29 @@
               <input id="name" class="field text-field text-field-lg" type="text" ng-model="confirmation.name" autofocus required>
             </div>
           </div>
-          <div class="grid-row margin-bottom-xl">
-            <div class="grid-xs-4">
+          <div class="grid-row">
+            <div class="grid-md-4 grid-xs-12 margin-bottom-xl">
               <label class="text-sm text-default">Confirmar:</label>
               <select ng-model="confirmation.accept" class="field text-field-lg select" required>
                 <option ng-selected="true" value="true">Sim</option>
                 <option value="false">Não</option>
               </select>
             </div>
-            <div class="grid-xs-4">
+            <div class="grid-md-4 grid-xs-12 margin-bottom-xl">
               <label class="text-sm text-default">Número de adultos:</label>
               <input id="adults" class="field text-field text-field-lg" type="number" mask="99" ng-model="confirmation.adults" required>
             </div>
-            <div class="grid-xs-4">
+            <div class="grid-md-4 grid-xs-12 margin-bottom-xl">
               <label class="text-sm text-default">Número de crianças:</label>
               <input id="children" class="field text-field text-field-lg" type="number" mask="99" ng-model="confirmation.children" required>
             </div>
           </div>
-          <div class="grid-row margin-bottom-xl">
-            <div class="grid-xs-6">
+          <div class="grid-row">
+            <div class="grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="text-sm text-default">E-mail:</label>
               <input id="email" class="field text-field text-field-lg" type="email" ng-model="confirmation.email">
             </div>
-            <div class="grid-xs-6">
+            <div class="grid-sm-6 grid-xs-12 margin-bottom-xl">
               <label class="text-sm text-default">Telefone:</label>
               <input id="phone" class="field text-field text-field-lg" type="text" mask="(99) 9?9999-9999" ng-model="confirmation.phone">
             </div>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="grid-row margin-bottom-xl">
-            <div class="grid-xs-2 grid-xs-offset-10">
+            <div class="grid-md-2 grid-md-offset-10 grid-sm-3 grid-sm-offset-9 grid-xs-6 grid-xs-offset-6">
               <button class="btn-lg btn-primary" ng-click="addConfirmation(confirmation)">Salvar</button>
             </div>
           </div>
