Create view of donation

--- a/public/views/publico.html
+++ b/public/views/publico.html
@@ -24,7 +24,7 @@
   </div>
   <div class="grid-row">
     <div class="grid-lg-2 grid-lg-offset-5 grid-md-4 grid-md-offset-4 grid-xs-6 grid-xs-offset-3">
-      <a href="#" class="clear-decoration">
+      <a href="/{{event.slug}}/vaquinha" class="clear-decoration">
         <buttom type="buttom" class="btn-lg text-white bd-white bd-sm bd-solid">$ AJUDAR $</buttom>
       </a>
     </div>
